# Sentiment-Analysis

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/: Makefile  README.md
notebooks/: EDA.ipynb  data_analysis.ipynb  model_experiments.ipynb
src/: __init__.py  const.py  data_loader.py  gradio_gui.py  main.py  model.py
src/data/: DataLoader.py
src/preprocessing/: DataCleaner.py  Lemmatizer.py  Stemmer.py  Tokenizer.py  const.py  utils.py
tests/preprocessing/: test_DataCleaner.py  test_Lemmatizer.py  test_Stemmer.py  test_Tokenizer.py
