[tool.poetry]
name = "sentimentanalysis"
version = "0.1.0"
description = ""
authors = ["krystian <krysti4nape@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
gdown = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"