[tool.poetry]
name = "sentimentanalysis"
version = "0.1.0"
description = ""
authors = ["krystian <krysti4nape@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
gdown = "^5.2.0"
matplotlib = "^3.9.0"
nltk = "^3.8.1"
pandas = "^2.2.2"
wordcloud = "^1.9.3"
seaborn = "^0.13.2"
sns = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"